fix overflow-x on body

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,4 +7,5 @@
 
 body {
   background-color: #121214;
+  overflow-x: hidden;
 }
